# GLADOS

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md
include/ddrf/: Filesystem.h  Image.h  ImageLoader.h  ImageSaver.h  Memory.h  Queue.h  Volume.h  image.h  memory.h  queue.h  volume.h
include/ddrf/bits/: memory_layout.h  memory_location.h  pool_allocator.h
include/ddrf/cuda/: Check.h  Coordinates.h  DeviceMemoryManager.h  Exception.h  HostMemoryManager.h  Image.h  Launch.h  Memory.h  algorithm.h  coordinates.h  exception.h  launch.h  memory.h  memory_pool.h  sync_policy.h  utility.h
include/ddrf/cuda/bits/: device_allocator.h  host_allocator.h  location.h  memcpy_direction.h  memory_layout.h  pitched_ptr.h  (+2 more)
include/ddrf/cufft/: exception.h  plan.h
include/ddrf/cusparse/: exception.h
include/ddrf/default/: Image.h  Memory.h  MemoryManager.h
include/ddrf/observer/: Observer.h  Subject.h
include/ddrf/pipeline/: InputSide.h  OutputSide.h  Pipeline.h  Port.h  SinkStage.h  SourceStage.h  Stage.h  input_side.h  output_side.h  pipeline.h  port.h  sink_stage.h  source_stage.h  stage.h  task_queue.h
include/glados/bits/: memory_layout.h  memory_location.h
include/glados/cuda/: algorithm.h  coordinates.h  exception.h  launch.h  memory.h
include/glados/cufft/: exception.h
include/glados/cusparse/: exception.h
include/glados/generic/: allocator.h
include/glados/pipeline/: output_side.h  pipeline.h  stage.h
src/: Filesystem.cpp
src/observer/: Subject.cpp
test/: cuda_copy.t.cu  cuda_fill.t.cu  cuda_pool_allocator.t.cu  cuda_uninitialized.t.cu
(+8 files in other folders)
