CMAKE_MINIMUM_REQUIRED(VERSION 3.2)
PROJECT(ddrf LANGUAGES CXX)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

IF(CMAKE_COMPILER_IS_GNUCXX)
	SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -g")
	SET(CMAKE_CXX_FLAGS_RELEASE "-O3")
ELSEIF(MSVC)
	SET(CMAKE_CXX_FLAGS_DEBUG "/DEBUG /Zi")
	SET(CMAKE_CXX_FLAGS_RELEASE "/O2")
ENDIF()

IF(CMAKE_BUILD_TYPE MATCHES DEBUG)
	SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Debug)
ELSEIF(CMAKE_BUILD_TYPE MATCHES RELEASE)
	SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Release)
ELSE()
	MESSAGE(FATAL_ERROR "No build type specified.")
ENDIF()

FIND_PACKAGE(Boost REQUIRED COMPONENTS system filesystem log date_time)

ADD_LIBRARY(ddrf SHARED ${CMAKE_SOURCE_DIR}/src/Filesystem.cpp ${CMAKE_SOURCE_DIR}/src/observer/Subject.cpp)
TARGET_INCLUDE_DIRECTORIES(ddrf PRIVATE ${CMAKE_SOURCE_DIR}/include)
TARGET_LINK_LIBRARIES(ddrf ${Boost_LIBRARIES})